@@ -1,9 +1,13 @@
 from zope.interface import implementer
 
 from plone.app.contentmenu.interfaces import IActionsMenu
+from plone.app.contentmenu.interfaces import IActionsSubMenuItem
 from plone.app.contentmenu.interfaces import IWorkflowMenu
-from plone.app.contentmenu.menu import WorkflowMenu as OriginalWorkflowMenu
+from plone.app.contentmenu.interfaces import IWorkflowSubMenuItem
 from plone.app.contentmenu.menu import ActionsMenu as OriginalActionsMenu
+from plone.app.contentmenu.menu import ActionsSubMenuItem as OriginalActionsSubMenuItem
+from plone.app.contentmenu.menu import WorkflowMenu as OriginalWorkflowMenu
+from plone.app.contentmenu.menu import WorkflowSubMenuItem as OriginalWorkflowSubMenuItem
 
 
 @implementer(IActionsMenu)
@@ -20,6 +24,17 @@ class ActionsMenu(OriginalActionsMenu):
         return items
 
 
+@implementer(IActionsSubMenuItem)
+class ActionsSubMenuItem(OriginalActionsSubMenuItem):
+
+    def available(self):
+        result = super(ActionsSubMenuItem, self).available()
+        is_content_proxy = getattr(self.context, 'is_content_proxy', False)
+        if is_content_proxy:
+            result = False
+        return result
+
+
 @implementer(IWorkflowMenu)
 class WorkflowMenu(OriginalWorkflowMenu):
 
@@ -30,3 +45,15 @@ class WorkflowMenu(OriginalWorkflowMenu):
         if is_content_proxy or is_folder_proxy:
             items = []
         return items
+
+
+@implementer(IWorkflowSubMenuItem)
+class WorkflowSubMenuItem(OriginalWorkflowSubMenuItem):
+
+    def available(self):
+        result = super(WorkflowSubMenuItem, self).available()
+        is_content_proxy = getattr(self.context, 'is_content_proxy', False)
+        is_folder_proxy = getattr(self.context, 'is_folder_proxy', False)
+        if is_content_proxy or is_folder_proxy:
+            result = False
+        return result
